--- a/index.html
+++ b/index.html
@@ -1,28 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-</head>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
+		<title>SGA-IC Docs</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<!-- <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" /> -->
+		<meta name="description" content="Documentation">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+		<!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"> -->
+		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"/> -->
+	   <!-- Themes (light + dark) -->
+	   <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
+	   <link rel="stylesheet" media="(prefers-color-scheme: light)" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
+	   <style>
+		 :root {
+		   --theme-hue: 325;
+		 }
+	   </style>
+	</head>
 <body>
-  <div id="app"></div>
-  <script>
-    window.$docsify = {
-      name: '',
-      repo: ''
-    }
-  </script>
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  <script>
-    window.$docsify = {
-      loadSidebar: true
-    }
-  </script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+	<div id="app"></div>
+	<script>
+	/* APP INFO */
+	const appName = 'SGA-IC';
+
+	/* DOCSIFY CONFIG */
+	window.$docsify = {
+			name: '<a id="home-link" class="app-name-link" data-nosearch href="/"><span id="home-text">' + appName + ' Docs</span><br></a>',
+			nameLink: false,
+			loadSidebar: true,
+			loadNavbar: true,
+			subMaxLevel: 3,
+			relativePath: true,
+			auto2top: true,
+		footer: {
+			pre: '<br><hr>',
+			copy: '<span>' + appName + ' &copy; ' + new Date().getFullYear() + '</span>',
+			auth: '| Docs created with <a href="https://github.com/docsifyjs/docsify/" target="_blank">Docsify</a>',
+			style: 'text-align: center;',
+		},
+		tabs: {
+			persist: false,
+			sync: false,
+			theme: 'classic',
+			tabComments: false,
+			tabHeadings: true,
+		},
+		copyCode: true,
+		search: {
+			paths: 'auto',
+			hideOtherSidebarContent: true,
+			depth: 3,
+		},
+	};
+	</script>
+	<!-- Docsify v4 -->
+	<script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
+
+   <!-- Recommended -->
+   <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/zoom-image.min.js"></script>
+
+   <!-- Extra -->
+	<script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
+	<script src="https://unpkg.com/docsify-copy-code@2"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script> -->
 </body>
 </html>
