--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 		<!-- <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" /> -->
 		<meta name="description" content="Documentation">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	   	<!-- Themes -->
 		<!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"> -->
-		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"/> -->
-	   <!-- Themes (light + dark) -->
-	   <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
-	   <link rel="stylesheet" media="(prefers-color-scheme: light)" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
-	   <style>
-		 :root {
-		   --theme-hue: 325;
-		 }
-	   </style>
+	   	<link rel="stylesheet" media="(prefers-color-scheme: dark)" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
+	   	<!-- Syntax Highlighting -->
+	   	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-funky.css">
+	   	<!-- Other Prism Themes: https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/ & https://github.com/PrismJS/prism-themes -->
+		<link rel="stylesheet" href="styles.css">
+	   	<style></style>
 	</head>
 <body>
 	<div id="app"></div>
@@ -32,7 +30,8 @@
 			loadNavbar: true,
 			subMaxLevel: 3,
 			relativePath: true,
-			auto2top: true,
+			// coverpage: true,
+			auto2top: true, /* scrolls to the top of the screen when the route is changed */
 		footer: {
 			pre: '<br><hr>',
 			copy: '<span>' + appName + ' &copy; ' + new Date().getFullYear() + '</span>',
@@ -65,6 +64,6 @@
    <!-- Extra -->
 	<script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
 	<script src="https://unpkg.com/docsify-copy-code@2"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
 </body>
 </html>
