--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 			tabComments: false,
 			tabHeadings: true,
 		},
-		copyCode: true,
 		search: {
 			paths: 'auto',
 			hideOtherSidebarContent: true,
@@ -65,5 +64,6 @@
 	<script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
 	<script src="https://unpkg.com/docsify-copy-code@2"></script>
 	<script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+	<!-- Link: https://jhildenbiddle.github.io/docsify-tabs -->
 </body>
 </html>
