--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>SGA-IC Docs</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<!-- <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" /> -->
+		<link rel="shortcut icon" type="image/jpg" href="assets/DOST-Logo.png" />
 		<meta name="description" content="Documentation">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 	   	<!-- Themes -->
