tentando resolver bug

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 	   	<!-- Themes -->
 		<!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"> -->
-	   	<link rel="stylesheet" media="(prefers-color-scheme: dark)" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
+		<link rel="stylesheet" href="https://unpkg.com/docsify-themeable/dist/css/theme-simple-dark.css">
 	   	<!-- Syntax Highlighting -->
 	   	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism-funky.css">
 	   	<!-- Other Prism Themes: https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/ & https://github.com/PrismJS/prism-themes -->
